manifest-fe.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-fe-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-fe
  template:
    metadata:
      labels:
        app: devops-fe
    spec:
      containers:
        - name: devops-fe
          image: aaditya4959/devops-fe:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: devops-fe-service
spec:
  selector:
    app: devops-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer

---
apiVersion: networking/v1
kind: Ingress
metadata:
  name: devops-fe-ingress
spec:
  rules:
    - host: devops-fe.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-fe-service
